# resovva

./: .gitignore  .gitmessage  CLAUDE.md  Dockerfile  Jenkinsfile  Progress.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yaml
app/: __init__.py  main.py
app/agents/: graph.py  state.py
app/agents/tools/: __init__.py  mastr_lookup.py
app/api/: dependencies.py
app/api/v1/: documents.py  workflows.py
app/core/: config.py  security.py
app/domain/: __init__.py
app/domain/models/: document.py  timeline.py
app/domain/services/: __init__.py  chronology_builder.py  document_ingest.py  pdf_parsing.py
app/infrastructure/: azure_openai.py  checkpointer.py  qdrant_client.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  graph.py  state.py
backend/app/agents/nodes/: build_master_timeline.py  detect_opponent.py  extract.py  extract_events.py  incremental_update.py  mastr_lookup.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: __init__.py  auth.py  cases.py  checkout.py  documents.py  dossier.py  mobile_upload.py  timeline.py  users.py  workflows.py
backend/app/api/v1/schemas/: auth.py  cases.py  checkout.py  documents.py  dossier.py  mobile_upload.py  timeline.py  users.py  workflows.py
backend/app/core/: __init__.py  category_field_config.py  config.py  exceptions.py  limiter.py  masking.py  privacy_engine.py  rag.py  security.py
backend/app/domain/: exceptions.py
backend/app/domain/models/: __init__.py  case.py  db.py  document.py
backend/app/domain/services/: chronology_builder.py
backend/app/infrastructure/: __init__.py  azure_openai.py  checkpointer.py  database.py  qdrant_client.py  storage.py
backend/app/services/: dossier_generator.py  evidence_compiler.py
backend/app/services/extraction/: llamaparse_extractor.py  local_extractor.py  parsing_router.py  pipeline.py
backend/app/templates/: dossier_main.html  email_dossier_ready.html
backend/app/workers/: dossier_worker.py  ocr_worker.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_case_flow.py  test_cases.py  test_checkout.py  test_epic3.py  test_epic4.py  test_epic5.py  test_exceptions.py  test_extraction_ai.py  test_extraction_pipeline.py  test_logging.py  test_masking.py  test_privacy_engine.py  test_security.py  test_timeline.py  test_unhappy_paths.py  test_workers.py
docs/: 00_PRODUCT_VISION.md  00_VISION.md  01_TECHNICAL_ARCHITECTURE.md  01_USER_FLOW.md  02_API-DESIGN.md  02_DATA_SCHEMA.md  issues_backlog.md
docs/epics/: EPIC1.md  EPIC2.md  EPIC3.md  EPIC4.md  EPIC5.md  EPIC6.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddEventModal.tsx  AnalysisSplitView.tsx  Card.tsx  (+7 more)
k8s/: .gitkeep  backend-deployment.yaml  configmaps.yaml  deployment.yaml  frontend-deployment.yaml  ingress.yaml
tests/: __init__.py  conftest.py  test_api.py
(+29 files in other folders)
